# terra4mice

./: .gitignore  .pre-commit-hooks.yaml  CHANGELOG.md  CLAUDE.md  IDEA.yaml  MANIFEST.in  PLAN.md  PROGRESS.md  README.es.md  README.md  SPEC.md  SYNERGIES.md  action.yml  pyproject.toml  terra4mice.contexts.json  terra4mice.spec.yaml  terra4mice.state.json
.github/workflows/: publish.yml  test.yml
docs/architecture/: obsidian-vault-integration.md
docs/reports/: competitive-analysis.md  critique-response-action-plan.md
examples/demo-project/: terra4mice.spec.yaml  terra4mice.state.json
examples/demo-project/src/auth/: login.py
examples/demo-project/src/payments/: processor.py
examples/demo-project/tests/: test_login.py  test_payments.py
examples/minimal/: README.md  terra4mice.spec.yaml
examples/starter-template/: README.md  terra4mice.spec.yaml
examples/ultratrack-demo/: terra4mice.spec.yaml  terra4mice.state.json
scripts/: publish.sh
src/terra4mice/: __init__.py  __main__.py  analyzers.py  backends.py  ci.py  cli.py  context_io.py  contexts.py  inference.py  models.py  planner.py  spec_parser.py  state_manager.py
src/terra4mice.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/terra4mice/apply/: __init__.py  agents.py  market_client.py  modes.py  runner.py  verify.py
tests/: test_agents.py  test_analyzers.py  test_apply.py  test_backends.py  test_ci.py  test_cli_contexts.py  test_context_io.py  test_contexts.py  test_e2e.py  test_obsidian_backend.py  test_obsidian_spec.py  test_symbols.py
